[gd_scene load_steps=2 format=2]

[ext_resource path="res://Wormhole.gd" type="Script" id=1]

[node name="Wormhole" type="Node2D"]
script = ExtResource( 1 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="RingContainer" type="Node2D" parent="."]

[node name="AdvancingTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="AdvancingTimer" to="." method="_on_AdvancingTimer_timeout"]
